--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ rbenv:
 addons:
   postgresql: 11.0
 script:
-- bundle exec rails db:{create,migrate} RAILS_ENV=test
+- bundle exec rake db:create RAILS_ENV=test
+- bundle exec rake db:migrate RAILS_ENV=test
 - bundle exec rspec
 deploy:
   provider: heroku
