--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,9 @@ language: ruby
 rbenv:
 - 2.5.3
 addons:
-  postgresql: 11.0
+  postgresql: 11
 script:
-- bundle exec rake db:create RAILS_ENV=test
-- bundle exec rake db:migrate RAILS_ENV=test
+- bundle exec rails db:{create,migrate} RAILS_ENV=test
 - bundle exec rspec
 deploy:
   provider: heroku
