--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,12 @@ language: ruby
 rbenv:
 - 2.5.3
 addons:
-  postgresql: 11
+  postgresql: 12
+  apt:
+    packages:
+    - postgresql-12
+    - postgresql-client-12
+dist: xenial
 script:
 - bundle exec rails db:{create,migrate} RAILS_ENV=test
 - bundle exec rspec
