--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -14,6 +14,11 @@ AllCops:
     - 'tmp/**/*'
     - 'vendor/**/*'
     - './*'
+  UseCache: false
+  DefaultFormatter: progress
+  DisplayStyleGuide: true
+  DisplayCopNames: false
+  TargetRubyVersion: 2.5
 
 Style/FrozenStringLiteralComment:
   Enabled: false
